; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_v3ext.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_v3ext.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@infile = common dso_local global i32 0, align 4
@test_pathlen = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @test_get_argument(i32 0)
  store i32 %2, i32* @infile, align 4
  %3 = call i32 @TEST_ptr(i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @test_pathlen, align 4
  %8 = call i32 @ADD_TEST(i32 %7)
  store i32 1, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %5
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @TEST_ptr(i32) #1

declare dso_local i32 @test_get_argument(i32) #1

declare dso_local i32 @ADD_TEST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
